# mc-oxide

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO.md  build.sh  dev-config.yml  flake.nix  package.json  pnpm-lock.yaml
cmake/: BuildCargo.cmake  Dependencies.cmake
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cxx-bindings/: Cargo.toml  build.rs
crates/cxx-bindings/src/: config.rs  lib.rs  logger.rs
crates/mc-oxide/: Cargo.toml
crates/mc-oxide/src/: config.rs  lib.rs  logger.rs  manifest.rs  prelude.rs  server.rs
include/: Color.hpp  MainWindow.hpp  MyButton.hpp  Precompiled.hpp  RustInterop.hpp
src/: Color.cpp  MainWindow.cpp  MyButton.cpp  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: global_config.rs  logger.rs  main.rs  prelude.rs  tauri_interface.rs
src/routes/: +page.svelte
