[package]
name = "mc-oxide"
version = "0.1.0"
description = "A tool to manage your minecraft servers"
authors = ["billy4479"]
license = "MIT"
repository = "https://github.com/billy4479/mc-oxide"
default-run = "mc-oxide"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
log4rs = "1.2"
open = "4"
serde_yaml = "0.9"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
log = "0"
lazy_static = "1"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["full"] }
zstd = "0.12.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = true
debug = false
opt-level = 3

[profile.release-small]
inherits = "release"
lto = true
strip = true
debug = false
opt-level = "z"
panic = "abort"
codegen-units = 1

