[package]
name = "mc-oxide-cli"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-oxide = { path = "../mc-oxide" }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

clap = "4"
