[package]
name = "mc-oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
dirs = "4"
hex = "0.4"
futures = "0.3"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
chrono = "0.4"
log4rs = "1.2"
zstd = "0.13"
